--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,18 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<h1>Editing Book</h1>
+
+<%= form_for(@book, url:'/') do |f| %>
+
+<p>title</p>
+<%= f.text_field :title %>
+
+<p>body</p>
+<%= f.text_area :body %>
+
+<%= f.submit 'Update Book' %>
+
+
+<%= link_to 'show', '/books/:id' %>  |
+<%= link_to 'Back', '/books' %>
+
+<% end %>
+
