--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,4 @@
-
+<p><%= notice %></p>
 
 <p>title
 
@@ -7,11 +7,10 @@
 
 <p>body
 <%= @book.body %>
-	
-</p>
+</p>	
 
 
-<%= link_to 'Edit', edit_book_path(@book) %>  |
+
+<%= link_to 'Edit', edit_book_path  %>  |
 <%= link_to 'Back', books_path %>
 
-<% end %>
